0.4.13-dev-793-gb5c6af4 gcc dbg is affected.
The code that is repsonsible for positioning this popup is within
win32ss/user/ntuser/menu.c function MENU_ShowSubPopup()
Last time we touched it was
0.4.13-dev-791-ga59df38 and
0.4.13-dev-792-g7c45a64 and
0.4.13-dev-793-gb5c6af4
Expected result
The context menus bottom right corner of Abyss Webserver from rapps should be exactly at the mouse pointers position when pressing the right mouse button like in 2k3sp2
https://jira.reactos.org/secure/attachment/48326/48326_2k3sp2.png
At the same time, this systray context menu should always be fully visible (which means it mirrors around the mouse ptrs position if there is not enough space available in default direction)
https://jira.reactos.org/secure/attachment/50647/50647_0.4.12-dev-347-g75a80ec__perfection.webm
Observed result
The position of the context menu is somewhere else, like in this video
https://jira.reactos.org/secure/attachment/54150/54150_WIP3_50f329d.webm
The positioning was perfect in 0.4.13-dev-790 (before the 3commits mentioned above),
but was always coupled with other more severe side-effects, so when fixed, it definitely should not break any of CORE-15863, CORE-15733 again. Most likely it's a hard to solve task for a little win only.
- relates to
-
CORE-15863 Regression, popup-menus that expand a sub-popup-menu may erroneously overlay itself
-
- Resolved
-