[WIN32SS] Fix tray popup menus stuck to the bottom of the screen Dedicated to Joachim CORE-16297